--- a/rov/templates/rov/cards/dsr_statistics.html
+++ b/rov/templates/rov/cards/dsr_statistics.html
@@ -15,7 +15,7 @@
             </button>
         </div>
     </div>
-        <div class="card-body collapse show bg-secondary" id="rov-stat-card-body">
+        <div class="card-body collapse show" id="rov-stat-card-body">
                   {{ dsr_statistics_table|safe }}
         </div>
 
